Fixed bug with search button on mobile view, caused by DDBPRO-37

--- a/web/themes/custom/ddbp/src/scss/elements/_search-form.scss
+++ b/web/themes/custom/ddbp/src/scss/elements/_search-form.scss
@@ -94,9 +94,8 @@
         font-weight: font-weight(bold);
         border: 0;
         background-color: unset;
-        font-size: 20px;
-        height: 57px;
-        width: 57px;
+        @include rsa(font-size, 15px, 20px);
+        @include rsa(height width, 50px, 57px);
     }
 }
 
