--- a/web/themes/custom/ddbp/src/scss/layout/_header.scss
+++ b/web/themes/custom/ddbp/src/scss/layout/_header.scss
@@ -35,6 +35,10 @@
     .search-form {
         position: relative;
     }
+
+    .search-form button[type=submit] {
+        width: auto;
+    }
 }
 
 .header__content {
